# jestocke-skill-test

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/: admin.py  date_range_list_filter.py  urls.py  views.py
api/serializers/: booking_param_serializer.py  booking_serializer.py
api/tests/: test_admin.py  test_booking_viewset.py
booking/: models.py
booking/management/commands/: create_records.py
booking/migrations/: 0001_initial.py  0002_alter_booking_storage_box_alter_booking_tenant.py
booking/services/: file_service.py
booking/tests/: test_file_service.py
booking/tests/fixtures/: bad_paramters.json  sample.json
jestocke_skill_test/: asgi.py  settings.py  urls.py  wsgi.py
market_place/: constants.py  models.py
market_place/fixtures/: sample.json
market_place/migrations/: 0001_initial.py
