[tool.poetry]
name = "jestocke-skill-test"
version = "0.1.0"
description = ""
authors = ["Guillaume ROY <guillaume@jestocke.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
django-money = "^3.2.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
